--- a/style.css
+++ b/style.css
@@ -10,11 +10,6 @@ body {
     text-align: center;
 }
 
-h1 span {
-    color: #0084ff;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px #0084ff;
-}
-
 a:any-link {
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -64,6 +59,13 @@ footer {
 	    -1px -1px 0 #A5D7E8;
 }
 
+img {
+    transition: transform .7s ease-in-out;
+  }
+  img:hover {
+    transform: rotate(360deg);
+  }
+
 @keyframes color {
     0% {
       background-color: #000000;
@@ -73,5 +75,5 @@ footer {
     }
     100% {
       background-color: #000000;
-    }
+    }   
   }
