--- a/style.css
+++ b/style.css
@@ -1,79 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+:root {
+    --main: #000000;
+    --second: #146C94;
+    --text: #F5F3F5;
+    --link: #146C94;
+}
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
-    font-family: 'Inter', sans-serif;
-    background-color: #000000;
-    animation-name: color;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-    color: #fff;
+    margin: 0;
+    max-width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    background-color: var(--main);
+    color: var(--text);
     text-align: center;
+}
+
+.wave-container {
+    position: relative;
+    background-color: var(--second);
+    text-align: center;
+    overflow: hidden;
+}
+
+.wave-container > svg {
+    display: block;
+    margin-bottom: -1em;
+    fill: var(--main);
+    fill-opacity: 1;
 }
 
 a:any-link {
-    color: rgb(255, 255, 255);
     text-decoration: none;
+    color: var(--link);
     font-weight: 800;
+    transition: all .4s ease-in-out;
 }
 
-div.container a:any-link {
-    transition: all 0.5s ease-in-out;
+a:any-link:hover {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 2px 1px #0B2447, 
+    -1px 3px 1px #19376D, 
+    -2px 5px 1px #576CBC;;
 }
 
-div.container a:any-link:hover {
-    color: rgb(255, 255, 255);
-    text-shadow: 0 2px 1px #0B2447, 
-      -1px 3px 1px #19376D, 
-      -2px 5px 1px #576CBC;;
+::selection {
+    background-color: purple;
+    opacity: 1;
 }
 
-div.container {
-    margin-top: 25vh;
-}
-
-div.container div {
-    text-align: center;
-    margin: 2em;
-}
-
-div.container .cta a {
-    color: rgb(255, 255, 255);
-}
-
-div.container div.cta a:hover {
-    color: rgb(0, 0, 0);
-    
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    font-size: 12px;
-    color: rgb(255, 255, 255);
-
-    text-shadow: -1px 1px 0 #0B2447,
-	    1px 1px 0 #19376D,
-	    1px -1px 0 #576CBC,
-	    -1px -1px 0 #A5D7E8;
+#socials {
+    margin-bottom: 5em;
 }
 
 img {
-    transition: transform .7s ease-in-out;
-  }
-  img:hover {
-    transform: rotate(360deg);
-  }
+  transition: transform .7s ease-in-out;
+}
+img:hover {
+  transform: rotate(360deg);
+}
 
-@keyframes color {
-    0% {
-      background-color: #000000;
-    }
-    50% {
-      background-color: #0d1324;
-    }
-    100% {
-      background-color: #000000;
-    }   
-  }
+footer {
+    display: flex;
+    flex-direction: column;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    font-weight: 200;
+}
+
+footer h3 {
+    font-size: 1.2rem;
+    color: var(--second);
+}
